deploy through gh-pages

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "contacts",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bunnydeviloper.github.io/contacts-react",
   "dependencies": {
     "escape-string-regexp": "^1.0.5",
     "form-serialize": "^0.7.2",
@@ -12,12 +13,15 @@
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
+    "gh-pages": "^1.2.0",
     "react-scripts": "^1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
